[RW-418] Fix spacing between title and content on generic forms and revision pages

--- a/html/themes/custom/common_design_subtheme/components/rw-form/rw-form.css
+++ b/html/themes/custom/common_design_subtheme/components/rw-form/rw-form.css
@@ -475,16 +475,6 @@ form [data-lengthchecker-status="ok"] {
 .node-form fieldset.field-new-source-wrapper {
   margin-top: 24px;
 }
-/* Term and Node edit forms */
-.taxonomy-term-country-profile-form,
-.taxonomy-term-disaster-profile-form,
-.taxonomy-term-source-user-posting-rights-form,
-.taxonomy-term-confirm-form,
-.node-confirm-form,
-.node-revision-revert-confirm,
-.node-revision-delete-confirm {
-  padding-top: 24px;
-}
 
 /**
  * Text formatter buttons.
